fix nav modals on mobile

--- a/src/styles/blocks/search.sass
+++ b/src/styles/blocks/search.sass
@@ -20,6 +20,8 @@
     left: 50%
     transform: translateX(-50%)
     z-index: $z-modal
+  @media (max-width: $mobile)
+    top: 220px
   &__result
     @include list-reset
     display: flex
